tests/ui/editions/edition-keywords-2018-2018-expansion.stderr
error: expected identifier, found keyword `async`
  --> $DIR/auxiliary/edition-kw-macro-2018.rs:7:19
   |
LL | macro_rules! produces_async {
   | --------------------------- in this expansion of `produces_async!`
LL |     () => (pub fn async() {})
   |                   ^^^^^ expected identifier, found keyword
   |
  ::: $DIR/edition-keywords-2018-2018-expansion.rs:8:5
   |
LL |     produces_async! {}
   |     ------------------ in this macro invocation
   |
help: escape `async` to use it as an identifier
   |
LL |     () => (pub fn r#async() {})
   |                   ++

error: aborting due to previous error

